==> nopnop2002/esp-idf-icm20948/components/ICM20948/ICM20948_WE.cpp <==
#include <math.h>
#include <cstring>
#include <string>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/i2c_master.h"
#include "esp_rom_sys.h"
#include "ICM20948_WE.h"
#define I2C_NUM I2C_NUM_0
#define I2C_TICKS_TO_WAIT 100 // Maximum ticks to wait before issuing a timeout.
#define delayMicroseconds(us) esp_rom_delay_us(us)
#define delay(ms) esp_rom_delay_us(ms*1000)
#define millis() xTaskGetTickCount()*portTICK_PERIOD_MS

bool ICM20948_WE::init(){
	i2c_master_bus_config_t i2c_mst_config = {};
	i2c_mst_config.clk_source = I2C_CLK_SRC_DEFAULT;
	i2c_mst_config.glitch_ignore_cnt = 7;
	i2c_mst_config.i2c_port = I2C_NUM;
	i2c_mst_config.scl_io_num = (gpio_num_t)CONFIG_GPIO_SCL;
	i2c_mst_config.sda_io_num = (gpio_num_t)CONFIG_GPIO_SDA;
	i2c_mst_config.flags.enable_internal_pullup = true;
	ESP_ERROR_CHECK(i2c_new_master_bus(&i2c_mst_config, &bus_handle));

	i2c_device_config_t dev_cfg = {};
	dev_cfg.dev_addr_length = I2C_ADDR_BIT_LEN_7;
	dev_cfg.device_address = i2cAddress;
	dev_cfg.scl_speed_hz = 400000;
	ESP_ERROR_CHECK(i2c_master_bus_add_device(bus_handle, &dev_cfg, &dev_handle));

    currentBank = 0;
    
    delay(100); // maximum power up time
    reset_ICM20948();
   
    uint8_t tries = 0;
    while(( whoAmI() != ICM20948_WHO_AM_I_CONTENT) && (tries < 10)){
        writeRegister8(2, ICM20948_ODR_ALIGN_EN, 1);
        reset_ICM20948();
        tries++;        
    }
    if(tries == 10) return false;
    
    accOffsetVal.x = 0.0;
    accOffsetVal.y = 0.0;
    accOffsetVal.z = 0.0;
    accCorrFactor.x = 1.0;
    accCorrFactor.y = 1.0;
    accCorrFactor.z = 1.0;
    accRangeFactor = 1.0;
    gyrOffsetVal.x = 0.0;
    gyrOffsetVal.y = 0.0;
    gyrOffsetVal.z = 0.0;
    gyrRangeFactor = 1.0;
    fifoType = ICM20948_FIFO_ACC;
        
    sleep(false);
    writeRegister8(2, ICM20948_ODR_ALIGN_EN, 1); // aligns ODR 
    
    return true;
}

void ICM20948_WE::switchBank(uint8_t newBank){
    if(newBank != currentBank){
        currentBank = newBank;

		uint8_t out_buf[2];
		out_buf[0] = ICM20948_REG_BANK_SEL;
		out_buf[1] = currentBank<<4;
		ESP_ERROR_CHECK(i2c_master_transmit(dev_handle, out_buf, 2, I2C_TICKS_TO_WAIT));
    }
}

void ICM20948_WE::writeRegister8(uint8_t bank, uint8_t reg, uint8_t val){
    switchBank(bank);
        
	uint8_t out_buf[2];
	out_buf[0] = reg;
	out_buf[1] = val;
	ESP_ERROR_CHECK(i2c_master_transmit(dev_handle, out_buf, 2, I2C_TICKS_TO_WAIT));
    delayMicroseconds(5);
}

void ICM20948_WE::writeRegister16(uint8_t bank, uint8_t reg, int16_t val){
    switchBank(bank);
    int8_t MSByte = static_cast<int8_t>((val>>8) & 0xFF);
    uint8_t LSByte = val & 0xFF;
        
	uint8_t out_buf[3];
	out_buf[0] = reg;
	out_buf[1] = MSByte;
	out_buf[2] = LSByte;
	ESP_ERROR_CHECK(i2c_master_transmit(dev_handle, out_buf, 3, I2C_TICKS_TO_WAIT));
	delayMicroseconds(5);
}

uint8_t ICM20948_WE::readRegister8(uint8_t bank, uint8_t reg){
    switchBank(bank);
    uint8_t regValue = 0;

	uint8_t out_buf[1];
	uint8_t in_buf[1];
	out_buf[0] = reg;
	ESP_ERROR_CHECK(i2c_master_transmit_receive(dev_handle, out_buf, 1, in_buf, 1, I2C_TICKS_TO_WAIT));
	regValue = in_buf[0];

    return regValue;
}

int16_t ICM20948_WE::readRegister16(uint8_t bank, uint8_t reg){
    switchBank(bank);
    uint8_t MSByte = 0, LSByte = 0;
    int16_t reg16Val = 0;
    
	uint8_t out_buf[1];
	uint8_t in_buf[2];
	out_buf[0] = reg;
	ESP_ERROR_CHECK(i2c_master_transmit_receive(dev_handle, out_buf, 1, in_buf, 2, I2C_TICKS_TO_WAIT));
	MSByte = in_buf[0];
	LSByte = in_buf[1];

    reg16Val = (MSByte<<8) + LSByte;
    return reg16Val;
}

void ICM20948_WE::readAllData(uint8_t* data){    
    switchBank(0);
    
	uint8_t out_buf[1];
	out_buf[0] = ICM20948_ACCEL_OUT;
	ESP_ERROR_CHECK(i2c_master_transmit_receive(dev_handle, out_buf, 1, data, 20, I2C_TICKS_TO_WAIT));
}

void ICM20948_WE::readICM20948xyzValFromFifo(xyzFloat *xyzResult){
    uint8_t fifoTriple[6];
    switchBank(0);
   
	uint8_t out_buf[1];
	out_buf[0] = ICM20948_FIFO_R_W;
	ESP_ERROR_CHECK(i2c_master_transmit_receive(dev_handle, out_buf, 1, fifoTriple, 6, I2C_TICKS_TO_WAIT));

    xyzResult->x = (static_cast<int16_t>((fifoTriple[0]<<8) + fifoTriple[1])) * 1.0f;
    xyzResult->y = (static_cast<int16_t>((fifoTriple[2]<<8) + fifoTriple[3])) * 1.0f;
    xyzResult->z = (static_cast<int16_t>((fifoTriple[4]<<8) + fifoTriple[5])) * 1.0f;
}
